--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ private_docker_papi_v2_usa.options
 tesk_application_ftp.conf
 ftp_centaur_cwl_runner.conf
 tesk_application.conf
+call_cache_blacklisting_options1.json
+call_cache_blacklisting_options2.json
