--- a/core/src/main/resources/reference.conf
+++ b/core/src/main/resources/reference.conf
@@ -230,7 +230,7 @@ system {
   
   // If true, requests that qualify will be streamed from the database to Cromwell. This will NOT stream the response to the client.
   // It's purely an internal optimization to relieve some of the memory burden when building large metadata responses.
-  metadata-streaming-enabled-by-default: true
+  metadata-streaming-enabled-by-default: false
 }
 
 workflow-options {
